--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 	<string name="app_name">PublicIM</string>
 	<string name="action_settings">Settings</string>
+	<string name="action_invite_friend">inviteFriend</string>
 	<string name="title_activity_chat">ChatActivity</string>
 
 	<!-- TODO: Remove or change this placeholder text -->
