--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 	<string name="app_name">PublicIM</string>
 	<string name="action_settings">Settings</string>
 	<string name="action_invite_friend">inviteFriend</string>
+	<string name="action_create_group">createGroup</string>
 	<string name="title_activity_chat">ChatActivity</string>
 
 	<!-- TODO: Remove or change this placeholder text -->
