--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
 	<string name="app_name">PublicIM</string>
 	<string name="action_settings">Settings</string>
-	<string name="action_invite_friend">加入好友</string>
+	<string name="action_view_member">成員列表</string>
+	<string name="action_invite_friend">新增好友</string>
 	<string name="action_create_group">建立群組</string>
 	<string name="action_invite_group">邀請</string>
 	<string name="action_exit_group">退出群組</string>
@@ -10,4 +11,5 @@
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
 	<string name="title_activity_invite">InviteActivity</string>
+	<string name="title_activity_member">MemberActivity</string>
 </resources>
