--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
 	<string name="hello_blank_fragment">Hello blank fragment</string>
 	<string name="title_activity_invite">InviteActivity</string>
 	<string name="title_activity_member">MemberActivity</string>
+
+	<string name="msg_read_count">"已讀" + %d</string>
+	<string name="msg_read">"已讀"</string>
 </resources>
