--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 	<string name="app_name">PublicIM</string>
 	<string name="action_settings">Settings</string>
 	<string name="action_view_member">成員列表</string>
+	<string name="action_register_push">通知</string>
+	<string name="action_mute">靜音</string>
 	<string name="action_invite_friend">新增好友</string>
 	<string name="action_create_group">建立群組</string>
 	<string name="action_invite_group">邀請</string>
