--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 	<string name="action_invite_group">邀請</string>
 	<string name="action_exit_group">退出群組</string>
 	<string name="action_logout">登出</string>
+	<string name="action_chat">聊天</string>
 
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
